tests/negative/undefined_fn2.sans
// expect-error: undefined
main() I {
  x = nonexistent_function(42)
  x
}
